--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -56,40 +56,7 @@
         </div>
       </div>
     </div>
-    <!-- <div ng-repeat="l in listingProducts">
-      <div class="col-md-3 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
-        <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
-          <div class="row" class="text-center">
-            <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width: 90%; height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
-              <img style="width: 90%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
-            </div>
-          </div>
-          <div class="row">
-            <div class=" card bg-white" style="padding-bottom:0px;">
-              <div class="row container-fluid" style="padding:10px 20px; ">
-                <h5 ng-if="l.product.name.length>35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
-                <h5 ng-if="l.product.name.length<=35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name}}</h5>
-                <span style="font-size:15px;padding-left:10px"> Price : </span>
 
-                <span style="font-size:15px;">
-                  <span ng-if="l.product.discount>0" class="text-muted" >
-                    <strike>   <i class="fa fa-inr"></i>{{l.product.price}}</strike>
-                  </span>
-                <span ng-if="l.product.discount==0">
-                     <i class="fa fa-inr"></i>{{l.product.price}}
-                  </span>
-                </span>
-
-                <span ng-if="l.product.discount>0" style="font-size:15px;">
-                  <i class="fa fa-inr"></i>{{l.product.discountedPrice.toFixed(2)}}
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 
   <div class="col-xs-10 col-sm-10 col-xs-offset-1  hidden-md hidden-lg">
@@ -98,52 +65,12 @@
         <product-card list="l"  add-cart="addToCart"></product-card>
       </div>
     </div>
-
-    <!-- <div ng-repeat="l in listingProducts">
-      <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
-        <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
-          <div class="row">
-            <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width:70%;height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
-              <img style="width:70%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
-            </div>
-          </div>
-          <div class="row">
-            <div class=" card bg-white" style="padding-bottom:0px;">
-              <div class="row container-fluid" style="padding:10px 20px;">
-                <h5 ng-if="l.product.name.length>35" style="margin:0px; height:50px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
-                <h5 ng-if="l.product.name.length<=35" style="margin:0px; height:50px;padding-left:10px">{{l.product.name}}</h5>
-                <span style="font-size:15px;padding-left:10px"> Price : </span>
-                <span style="font-size:15px; ">
-                  <span ng-if="l.product.discount>0" class="text-muted" >
-                    <strike> <i class="fa fa-inr"></i>{{l.product.price}}</strike>
-                  </span>
-                <span ng-if="l.product.discount==0">
-                     <i class="fa fa-inr"></i>{{l.product.price}}
-                  </span>
-                </span>
-
-                <span ng-if="l.product.discount>0" style="font-size:15px;">
-                <i class="fa fa-inr"></i>{{l.product.discountedPrice.toFixed(2)}}
-                </span>
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 </div>
 <div class="row" style="margin:0px">
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-left:20px;padding-right:40px;">
     <div class="row" ng-if="subSlide.banners.length > 0">
       <div style="height:45vh;margin-bottom:20px;margin-left:10px;padding-left:0px;padding-right:0px;" class="card col-md-12 text-center  hidden-xs hidden-sm">
-        <!-- <picture>
-          <source media="(min-width: 100%)" srcset="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()}">
-            <source media="(min-width: 100%)" srcset="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()}">
-              <img src="{{subSlide.img}}" alt="Flowers" style="width:100%;" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()}">
-            </picture> -->
         <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh" ng-src="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()})" />
       </div>
     </div>
@@ -170,40 +97,6 @@
         </div>
       </div>
     </div>
-    <!-- <div ng-repeat="l in listingRemainingProducts">
-      <div class="col-md-3 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
-        <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
-          <div class="row" class="text-center">
-            <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width: 90%; height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
-              <img style="width: 90%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
-            </div>
-          </div>
-          <div class="row">
-            <div class=" card bg-white" style="padding-bottom:0px;">
-              <div class="row container-fluid" style="padding:10px 20px; ">
-                <h5 ng-if="l.product.name.length>35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
-                <h5 ng-if="l.product.name.length<=35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name}}</h5>
-                <span style="font-size:15px;padding-left:10px"> Price : </span>
-
-                <span style="font-size:15px;">
-                  <span ng-if="l.product.discount>0" class="text-muted" >
-                    <strike>   <i class="fa fa-inr"></i>{{l.product.price}}</strike>
-                  </span>
-                <span ng-if="l.product.discount==0">
-                     <i class="fa fa-inr"></i>{{l.product.price}}
-                  </span>
-                </span>
-
-                <span ng-if="l.product.discount>0" style="font-size:15px;">
-                  <i class="fa fa-inr"></i>{{l.product.discountedPrice.toFixed(2)}}
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 
   <div class="col-xs-10 col-sm-10 col-xs-offset-1 hidden-md hidden-lg">
@@ -212,40 +105,6 @@
         <product-card list="l" add-cart="addToCart"></product-card>
       </div>
     </div>
-    <!-- <div ng-repeat="l in listingRemainingProducts">
-      <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
-        <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
-          <div class="row">
-            <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width:70%;height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
-              <img style="width:70%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
-            </div>
-          </div>
-          <div class="row">
-            <div class=" card bg-white" style="padding-bottom:0px;">
-              <div class="row container-fluid" style="padding:10px 20px;">
-                <h5 ng-if="l.product.name.length>35" style="margin:0px; height:50px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
-                <h5 ng-if="l.product.name.length<=35" style="margin:0px; height:50px;padding-left:10px">{{l.product.name}}</h5>
-                <span style="font-size:15px;padding-left:10px"> Price : </span>
-                <span style="font-size:15px; ">
-                  <span ng-if="l.product.discount>0" class="text-muted" >
-                    <strike> <i class="fa fa-inr"></i>{{l.product.price}}</strike>
-                  </span>
-                <span ng-if="l.product.discount==0">
-                     <i class="fa fa-inr"></i>{{l.product.price}}
-                  </span>
-                </span>
-
-                <span ng-if="l.product.discount>0" style="font-size:15px;">
-                <i class="fa fa-inr"></i>{{l.product.discountedPrice.toFixed(2)}}
-                </span>
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 </div>
 
@@ -255,7 +114,7 @@
 <div class="row" style="margin:0px;" ng-if="me != null">
 
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding:20px; padding-top:0px;">
-    <div style="padding:10px;" class="row card bg-white">
+    <div style="padding:10px;" class="row bg-white">
       <h4>Recently Viewed</h4>
       <div class="row">
         <div class="col-md-12">
@@ -266,82 +125,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div ng-repeat="r in recentlyViewed" style="padding:0px;">
-        <div class="col-md-3 anim-in-out anim-zoom-out">
-          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
-            <div class="row">
-              <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-                <img style="width: 90%; height:200px;" class="img" ng-src="{{r.product.files[0].attachment}}" ng-if="r.product.files.length>0">
-                <img style="width: 90%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.product.files==null">
-              </div>
-            </div>
-            <div class="row container-fluid" style="padding-top:5px;">
-              <h5 ng-if="r.product.product.name.length>35" style="margin:0px;  height:60px;">{{r.product.product.name.slice(0,35)}}...</h5>
-              <h5 ng-if="r.product.product.name.length<=35" style="margin:0px;  height:60px;">{{r.product.product.name}}</h5>
-              <span style="font-size:15px;"> Price : </span>
-
-              <span style="font-size:15px; padding-left:10px; ">
-                <span ng-if="r.product.product.discount>0" class="text-muted" >
-                  <strike><i class="fa fa-inr"></i>{{r.product.product.price}}</strike>
-                </span>
-              <span ng-if="r.product.product.discount==0">
-                <i class="fa fa-inr"></i>{{r.product.product.price}}
-                </span>
-              </span>
-
-              <span ng-if="r.product.product.discount>0" style="font-size:15px;">
-              <i class="fa fa-inr"></i>{{r.product.product.discountedPrice.toFixed(2)}}
-              </span>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
   </div>
-
-
-  <!-- <div class="col-xs-12 hidden-md hidden-lg" style="padding:40px; padding-top:0px;">
-    <div style="padding:10px;" class="row card bg-white">
-      <h4>Recently Viewed</h4>
-      <div class="row">
-        <div class=" col-xs-12 col-sm-6" ng-repeat="l in recentlyViewed">
-          <product-card list="l" add-cart="addToCart"></product-card>
-        </div>
-      </div> -->
-      <!-- <div ng-repeat="r in recentlyViewed" style="padding:0px;">
-        <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out">
-          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
-            <div class="row">
-              <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-                <img style="width:70%;height:200px;" class="img" ng-src="{{r.product.files[0].attachment}}" ng-if="r.product.files.length>0">
-                <img style="width:70%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.product.files==null">
-              </div>
-            </div>
-            <div class="row container-fluid" style="padding-top:5px; padding-bottom:20px;">
-              <h5 ng-if="r.product.product.name.length>35" style="margin:0px;  height:40px;">{{r.product.product.name.slice(0,35)}}...</h5>
-              <h5 ng-if="r.product.product.name.length<=35" style="margin:0px;  height:40px;">{{r.product.product.name}}</h5>
-              <span style="font-size:15px;"> Price : </span>
-
-              <span style="font-size:15px; padding-left:10px; ">
-                <span ng-if="r.product.product.discount>0" class="text-muted" >
-                  <strike><i class="fa fa-inr"></i>{{r.product.product.price}}</strike>
-                </span>
-              <span ng-if="r.product.product.discount==0">
-                <i class="fa fa-inr"></i>{{r.product.product.price}}
-                </span>
-              </span>
-
-              <span ng-if="r.product.product.discount>0" class="pull-right" style="font-size:15px;">
-              <i class="fa fa-inr"></i>{{r.product.product.discountedPrice.toFixed(2)}}
-              </span>
-            </div>
-          </div>
-        </div>
-      </div> -->
-    <!-- </div>
-  </div> -->
-
-
-
 </div>
