--- a/homepage/static/ngTemplates/app.customer.knowledgeBase.html
+++ b/homepage/static/ngTemplates/app.customer.knowledgeBase.html
@@ -11,9 +11,17 @@
     <div class="row" style="padding-top:15px">
       <div class="col-md-3">
         <div class="row" style="border-right:solid 2px #eeeeee;min-height:54vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
-          <div class="row text-center container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;font-size:18px;padding:10px;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
-            {{doc.title}}
+          <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
+            <div class="text-center" style="font-size:20px;padding:10px"><b>{{doc.title}}</b></div>
+            <ul style="list-style:none;position:absolute;bottom:-15px;left:0px;font-size:14px" class="list-inline">
+              <li>Last modified:<b> 7:27</b></li>
+              <li>Process:<b> abc</b></li>
+              <li>Versions:<b> 4</b></li>
+            </ul>
           </div>
+          <!-- <div class="">
+            lastmodified time process versions
+          </div> -->
           <!-- <div ng-repeat="doc in custDocs">
             <p>{{doc.title}}</p>
           </div> -->
@@ -59,29 +67,19 @@
                   Article
                 </uib-tab-heading>
                   <div >
-                    <p style="color:red;margin:15px 0px">Category</p>
-                    <select class="form-control" id="category" style="margin:5px 0px">
-                      <option>Syrow</option>
-                      <option>erp</option>
-                      <option>random</option>
-                    </select>
-                    <select class="form-control" id="" style="margin:5px 0px">
-                      <option>Syrow</option>
-                      <option>erp</option>
-                      <option>random</option>
-                    </select>
+                    <input type="text" class="form-control"  ng-model="selected_process" uib-typeahead="process as process.text for process in processSearch($viewValue)"/
                     <p style="color:red;margin:15px 0px">Article owner</p>
                     <select class="form-control" id="" style="margin:5px 0px">
                       <option>Syrow</option>
                       <option>erp</option>
                       <option>random</option>
                     </select>
-                    <p style="color:red;margin:20px 0px;">Display permission</p>
-                        <ul class="list-inline versions"  style="font-size:15px">
-                          <li  style="padding:0px"><button  ng-class="{active : agents}" ng-click="agents=true">Agents</button></li>
-                          <li style="padding:0px"><button ng-class="{active : regd}" ng-click="regd=true">Reg. users</button></li>
-                          <li style="padding:0px"><button ng-class="{active : all}" ng-click="all=true">All users</button></li>
-                        </ul>
+                    <!-- <p style="color:red;margin:20px 0px;">Display permission</p>
+                        <ul class="list-inline versions"  style="font-size:15px" ng-init="type='agents'">
+                          <li  style="padding:0px"><button style="padding:8px;border-radius:10px" class="{{type=='agents' ? 'active' : ''}}" ng-click="type='agents'">Agents</button></li>
+                          <li style="padding:0px"><button style="padding:8px; border-radius:10px" class="{{type=='reg' ? 'active' : ''}}" ng-click="type='reg'">Reg. users</button></li>
+                          <li style="padding:0px"><button style="padding:8px;border-radius:10px" class="{{type=='all' ? 'active' : ''}}" ng-click="type='all'">All users</button></li>
+                        </ul> -->
 
                   </div>
               </uib-tab>
