--- a/support/static/ngTemplates/app.customers.document.html
+++ b/support/static/ngTemplates/app.customers.document.html
@@ -18,8 +18,13 @@
     <div class="row" style="padding-top:15px">
       <div class="col-md-3">
         <div class="row" style="border-right:solid 2px #eeeeee;min-height:82vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
-          <div class="row text-center container-fluid card {{docForm.pk==doc.pk?'bg-yellow':'bg-shaded'}}" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;font-size:18px;padding:10px;margin:20px 10px">
-            {{doc.title}}
+          <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
+            <div class="text-center" style="font-size:20px;padding:10px"><b>{{doc.title}}</b></div>
+            <ul style="list-style:none;position:absolute;bottom:-15px;left:0px;font-size:14px" class="list-inline">
+              <li>Last modified:<b> 7:27</b></li>
+              <li>Process:<b> abc</b></li>
+              <li>Versions:<b> 4</b></li>
+            </ul>
           </div>
         </div>
       </div>
