--- a/support/static/ngTemplates/app.customers.document.html
+++ b/support/static/ngTemplates/app.customers.document.html
@@ -6,6 +6,10 @@
           Add Document &nbsp;<i class="fa fa-plus fa-lg"></i>
         </div>
       </div>
+      <div class="col-md-8" style="display:inline">
+        <h3 style="margin-top:0px">Company name : {{compDetails.name}}</h3>
+        <h4>Contact Person: {{compDetails.contactPerson.first_name}} {{compDetails.contactPerson.last_name}}</h4>
+      </div>
     </div>
     <div class="row" ng-if="custDetails.pk==none">
       <div class="col-md-12">
@@ -17,15 +21,23 @@
     <hr>
     <div class="row" style="padding-top:15px">
       <div class="col-md-3">
-        <div class="row" style="border-right:solid 2px #eeeeee;min-height:82vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
+        <div class="row" style="border-right:solid 2px #eeeeee;min-height:54vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
           <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
+            <div class="text-center" style="font-size:20px;padding:10px"><b>{{doc.title}}</b></div>
+            <ul style="list-style:none;margin-bottom:-10px;font-size:12px" class="list-inline">
+              <li>Last modified:<b> 7:27</b></li>
+              <li>Process:<b> abc</b></li>
+              <li>Versions:<b> 4</b></li>
+            </ul>
+          </div>
+          <!-- <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
             <div class="text-center" style="font-size:20px;padding:10px"><b>{{doc.title}}</b></div>
             <ul style="list-style:none;position:absolute;bottom:-15px;left:0px;font-size:14px" class="list-inline">
               <li>Last modified:<b> 7:27</b></li>
               <li>Process:<b> abc</b></li>
               <li>Versions:<b> 4</b></li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-md-9" style="padding-left:35px" ng-if="docForm!=none">
@@ -50,32 +62,22 @@
                 <uib-tab-heading>
                   Article
                 </uib-tab-heading>
-                  <div >
-                    <p style="color:red;margin:15px 0px">Category</p>
-                    <select class="form-control" id="category" style="margin:5px 0px">
-                      <option>Syrow</option>
-                      <option>erp</option>
-                      <option>random</option>
-                    </select>
-                    <select class="form-control" id="" style="margin:5px 0px">
-                      <option>Syrow</option>
-                      <option>erp</option>
-                      <option>random</option>
-                    </select>
-                    <p style="color:red;margin:15px 0px">Article owner</p>
-                    <select class="form-control" id="" style="margin:5px 0px">
-                      <option>Syrow</option>
-                      <option>erp</option>
-                      <option>random</option>
-                    </select>
-                    <p style="color:red;margin:20px 0px">Display permission</p>
-                        <ul class="list-group">
-                          <li class="active"><a href="#">Agents</a></li>
-                          <li><a href="#">Reg</a></li>
-                          <li><a href="#">All</a></li>
-                        </ul>
+                <div >
+                  <input type="text" class="form-control"  ng-model="selected_process" uib-typeahead="process as process.text for process in processSearch($viewValue)"/
+                  <p style="color:red;margin:15px 0px">Article owner</p>
+                  <select class="form-control" id="" style="margin:5px 0px">
+                    <option>Syrow</option>
+                    <option>erp</option>
+                    <option>random</option>
+                  </select>
+                  <!-- <p style="color:red;margin:20px 0px;">Display permission</p>
+                      <ul class="list-inline versions"  style="font-size:15px" ng-init="type='agents'">
+                        <li  style="padding:0px"><button style="padding:8px;border-radius:10px" class="{{type=='agents' ? 'active' : ''}}" ng-click="type='agents'">Agents</button></li>
+                        <li style="padding:0px"><button style="padding:8px; border-radius:10px" class="{{type=='reg' ? 'active' : ''}}" ng-click="type='reg'">Reg. users</button></li>
+                        <li style="padding:0px"><button style="padding:8px;border-radius:10px" class="{{type=='all' ? 'active' : ''}}" ng-click="type='all'">All users</button></li>
+                      </ul> -->
 
-                  </div>
+                </div>
               </uib-tab>
               <uib-tab>
                   <uib-tab-heading>
