--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -298,85 +298,25 @@
         <!-- review page ends here  -->
         <div ng-if="data.stage == 'shippingDetails'">
           <div class="row">
-            <div class="col-md-7 col-xs-12">
-              <h4>Address</h4>
-              <div class="form-group">
-                <label for="street">Street : </label>
-                <textarea ng-model="data.address.street" class="form-control" id="street" placeholder="Enter street.." ></textarea>
-              </div>
-              <div class="form-group">
-                <label for="ldm">Land Mark : </label>
-                <input type="text" class="form-control" id="ldm" ng-model="data.address.landMark" placeholder="Enter Landmark.." >
-              </div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="form-group">
-                    <label for="city">City : </label>
-                    <input ng-model="data.address.city" type="text" class="form-control" id="city" placeholder="Enter City.." >
-                  </div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="form-group">
-                    <label for="state">State : </label>
-                    <input ng-model="data.address.state" type="text" class="form-control" id="state" placeholder="Enter State..">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="form-group">
-                    <label for="pincode">Pincode : </label>
-                    <input ng-model="data.address.pincode" type="text" class="form-control" id="pincode" placeholder="Enter Pincode..">
-                  </div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="form-group">
-                    <label for="country">Country : </label>
-                    <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country..">
-                  </div>
-                </div>
-              </div>
-              <div class="row" style="margin-bottom:35px">
-                <div class="col-xs-6">
-                  <button type="button" class="btn btn-default" ng-click="resetAdd()" >
-                    <i class="fa fa-refresh fa-lg"></i> &nbsp;Reset This Address
-                  </button>
-
-                  <!-- <i class="btn btn-default" ng-click="resetAdd()"><i class="fa fa-refresh fa-lg"></i> Reset This Address</i> -->
-                </div>
-                <div class="col-xs-6">
-                  <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none" >
-                    <i class="fa fa-star fa-lg"></i> &nbsp;Save for later use
-                  </button>
-                  <!-- <i class="pull-right btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none"><i class="fa fa-star fa-lg"></i> Save for later use</i> -->
-                </div>
-              </div>
-              <h4>Contact Details</h4>
-              <div class="form-group">
-                <label for="mob">Mobile no. : </label>
-                <input type="text" class="form-control" id="mob" ng-model="data.address.mobile" placeholder="Enter mobile.." >
-              </div>
-              <div class="row" style="margin-top:55px">
-                <button type="button" class="btn btn-default pull-left" ng-click="prev()">
-                  Go back
-                </button>
-                <button type="button" class="btn btn-success pull-right" ng-click="next()">
-                  Next
-                </button>
-              </div>
-            </div>
-
-            <div class="col-md-5 col-xs-12" style="padding-left:55px" ng-if="savedAddress.length>0">
+            <div class="col-md-5 hidden-sm hidden-xs" style="padding-left:55px" ng-if="savedAddress.length>0">
               <span class="text-center"> <h4>Saved Addresses</h4><br> </span>
-              <div class="row" ng-repeat="adr in savedAddress" style="padding:5px 30px;margin-bottom:15px">
+              <div class="row" ng-repeat="adr in savedAddress">
+                <div class="col-md-1 hidden-sm hidden-xs">
+                  <input ng-model="adr.pk" type="radio" name="radio" value="adr.pk" ng-click="show($index)">
+                </div>
+                <div class="col-md-11 hidden-sm hidden-xs">
+              <div class="row"  style="padding:5px 30px;margin-bottom:15px">
                 <div class="row card">
                   <div class="row text-center">
-                    <div class="col-md-12 col-xs-12" style="font-size:19px">
+                    <div class="col-md-9 hidden-sm hidden-xs" style="font-size:19px" >
                       <strong>{{adr.title}}</strong>
+                    </div>
+                    <div class="col-md-2 hidden-sm hidden-xs" style="cursor:pointer;padding-top:10px"  ng-if="$index==idx"  ng-click="ChangeAdd($index,'edit')">
+                    <strong>Edit <i class="fa fa-pencil"></i></strong>
                     </div>
                   </div>
                   <div class="row" style="padding-left:15px;font-size:16px">
-                    <div class="col-md-12 col-xs-12">
+                    <div class="col-md-12 hidden-sm hidden-xs">
                       <strong>Landmark :</strong> {{adr.landMark}}
                     </div>
                   </div>
@@ -386,7 +326,72 @@
                     </div>
                   </div>
                   <div class="row" style="padding-left:15px;font-size:16px">
-                    <div class="col-md-6 col-xs-6">
+                    <div class="col-md-6 hidden-sm hidden-xs">
+                      <strong>City :</strong> {{adr.city}}
+                    </div>
+                    <div class="col-md-6 hidden-sm hidden-xs">
+                      <strong>State :</strong> {{adr.state}}
+                    </div>
+                  </div>
+                  <div class="row" style="padding-left:15px;font-size:16px">
+                    <div class="col-md-6 hidden-sm hidden-xs">
+                      <strong>PinCode :</strong> {{adr.pincode}}
+                    </div>
+                    <div class="col-md-6 hidden-sm hidden-xs">
+                      <strong>Country :</strong> {{adr.country}}
+                    </div>
+                  </div>
+                </div>
+                <div class="row" ng-if="$index==idx">
+                  <div class=" btn btn-block btn-primary" ng-click="ChangeAdd($index,'use')">
+                    Use This Address
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+              <div class="row">
+                <div class="col-md-1 col-xs-1">
+
+                </div>
+                  <div class="col-md-11 col-xs-1">
+                <div class=" btn btn-block btn-default" ng-click="resetAdd()" >
+                  Add a New Address
+                </div>
+              </div>
+              </div>
+
+
+            </div>
+            <div class="hidden-md hidden-lg col-xs-12"  ng-if="savedAddress.length>0">
+              <span class="text-center"> <h4>Saved Addresses</h4><br> </span>
+              <div class="row" ng-repeat="adr in savedAddress">
+                <div class="hidden-md hidden-lg col-xs-1">
+                  <input ng-model="adr.pk" type="radio" name="radio" value="adr.pk" ng-click="show($index)">
+                </div>
+                <div class="hidden-md hidden-lg  col-xs-10">
+              <div class="row"  style="padding:5px 30px;margin-bottom:15px">
+                <div class="row card">
+                  <div class="row text-center">
+                    <div class="hidden-md hidden-lg  col-xs-9" style="font-size:19px" >
+                      <strong>{{adr.title}}</strong>
+                    </div>
+                    <div class="hidden-md hidden-lg  col-xs-2" style="cursor:pointer;padding-top:10px"  ng-if="$index==idx"  ng-click="ChangeAdd($index,'edit')">
+                    <strong><i class="fa fa-pencil"></i></strong>
+                    </div>
+                  </div>
+                  <div class="row" style="padding-left:15px;font-size:16px">
+                    <div class="hidden-md hidden-lg  col-xs-12">
+                      <strong>Landmark :</strong> {{adr.landMark}}
+                    </div>
+                  </div>
+                  <div class="row" style="padding-left:15px;font-size:16px">
+                    <div class="hidden-md hidden-lg col-xs-12">
+                      <strong>Street :</strong> {{adr.street}}
+                    </div>
+                  </div>
+                  <div class="row" style="padding-left:15px;font-size:16px">
+                    <div class="hidden-md hidden-lg col-xs-6">
                       <strong>City :</strong> {{adr.city}}
                     </div>
                     <div class="col-md-6 col-xs-6">
@@ -394,7 +399,7 @@
                     </div>
                   </div>
                   <div class="row" style="padding-left:15px;font-size:16px">
-                    <div class="col-md-6 col-xs-6">
+                    <div class="hidden-md hidden-lg col-xs-6">
                       <strong>PinCode :</strong> {{adr.pincode}}
                     </div>
                     <div class="col-md-6 col-xs-6">
@@ -402,15 +407,101 @@
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class=" btn btn-block btn-primary" ng-click="ChangeAdd($index)">
+                <div class="row" ng-if="$index==idx">
+                  <div class=" btn btn-block btn-primary" ng-click="ChangeAdd($index,'use')">
                     Use This Address
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+              <div class="row">
+                <div class="col-xs-1 hidden-md hidden-lg">
+
+                </div>
+                  <div class="col-xs-10 hidden-md hidden-lg">
+                <div class=" btn btn-block btn-default" ng-click="resetAdd()" >
+                  Add a New Address
+                </div>
+              </div>
+              </div>
+
+
+            </div>
+            <div class="col-md-7 col-xs-12">
+              <div class="row" ng-if="addressview">
+              <h4>Address</h4>
+              <div class="form-group">
+                <!-- <label for="street">Street : </label> -->
+                <textarea ng-model="data.address.street" class="form-control" id="street" placeholder="Enter street.." ></textarea>
+              </div>
+              <div class="form-group">
+                <!-- <label for="ldm">Land Mark : </label> -->
+                <input type="text" class="form-control" id="ldm" ng-model="data.address.landMark" placeholder="Enter Landmark.." >
+              </div>
+              <div class="row">
+                <div class="col-md-6 col-xs-6">
+                  <div class="form-group">
+                    <!-- <label for="city">City : </label> -->
+                    <input ng-model="data.address.city" type="text" class="form-control" id="city" placeholder="Enter City.." >
+                  </div>
+                </div>
+                <div class="col-md-6 col-xs-6">
+                  <div class="form-group">
+                    <!-- <label for="state">State : </label> -->
+                    <input ng-model="data.address.state" type="text" class="form-control" id="state" placeholder="Enter State..">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 col-xs-6">
+                  <div class="form-group">
+                    <!-- <label for="pincode">Pincode : </label> -->
+                    <input ng-model="data.address.pincode" type="text" class="form-control" id="pincode" placeholder="Enter Pincode..">
+                  </div>
+                </div>
+                <div class="col-md-6 col-xs-6">
+                  <div class="form-group">
+                    <!-- <label for="country">Country : </label> -->
+                    <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country..">
+                  </div>
+                </div>
+              </div>
+              <div class="row" style="margin-bottom:35px">
+                <!-- <div class="col-xs-6">
+                  <button type="button" class="btn btn-default" ng-click="resetAdd()" >
+                    <i class="fa fa-refresh fa-lg"></i> &nbsp;Reset This Address
+                  </button> -->
+
+                  <!-- <i class="btn btn-default" ng-click="resetAdd()"><i class="fa fa-refresh fa-lg"></i> Reset This Address</i> -->
+                <!-- </div> -->
+                <div class="col-xs-6">
+                  <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none" >
+                    <i class="fa fa-star fa-lg"></i> &nbsp;Save for later use
+                  </button>
+                  <!-- <i class="pull-right btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none"><i class="fa fa-star fa-lg"></i> Save for later use</i> -->
+                </div>
+              </div>
+            </div>
+              <h4>Contact Details</h4>
+              <div class="form-group">
+                <!-- <label for="mob">Mobile no. : </label> -->
+                <input type="text" class="form-control" id="mob" ng-model="data.address.mobile" placeholder="Enter mobile.." >
+              </div>
 
             </div>
 
+
+
+
+          </div>
+          <div class="row" style="margin-top:55px">
+            <button type="button" class="btn btn-default pull-left" ng-click="prev()">
+              Go back
+            </button>
+            <button type="button" class="btn btn-success pull-right" ng-click="next()">
+              Next
+            </button>
           </div>
           <!-- <div class="row" style="margin-top:55px">
             <button type="button" class="btn btn-default pull-left" ng-click="prev()">
