--- a/static_shared/ngTemplates/productCart.html
+++ b/static_shared/ngTemplates/productCart.html
@@ -62,7 +62,7 @@
                   <i class="fa fa-minus-circle fa-2x" style="cursor:pointer" ng-if="list.added_cart>0"  ng-click="decrement();$event.stopPropagation()"></i>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="bottom: 10px">
-                  <span style="font-size:25px; padding:0px 20px;"> {{list.added_cart}} </span>
+                  <span style="font-size:25px; padding:0px 0px 0px 0px;"> {{list.added_cart}} </span>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-4">
                   <i class="fa fa-plus-circle fa-2x" style="cursor:pointer"  ng-click="increment();$event.stopPropagation()"></i>
