--- a/support/static/ngTemplates/app.customers.document.html
+++ b/support/static/ngTemplates/app.customers.document.html
@@ -21,10 +21,10 @@
     <hr>
     <div class="row" style="padding-top:15px">
       <div class="col-md-3">
-        <div class="row" style="border-right:solid 2px #eeeeee;min-height:54vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
-          <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
-            <div class="text-center" style="font-size:20px;padding:10px"><b>{{doc.title}}</b></div>
-            <ul style="list-style:none;margin-bottom:-10px;font-size:12px" class="list-inline">
+        <div class="row" style="border-right:solid 2px #e0e0e0;min-height:54vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
+          <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px ;padding:15px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
+            <div style="font-size:20px;padding:10px;margin-top:-17px;margin-left:-10px;opacity:0.7;margin-bottom:7px"><b>{{doc.title}}</b></div>
+            <ul style="list-style:none;margin-bottom:-10px;font-size:12px;opacity:0.7;" class="list-inline">
               <li>Last modified:<b> 7:27</b></li>
               <li>Process:<b> abc</b></li>
               <li>Versions:<b> 4</b></li>
@@ -100,7 +100,7 @@
                   </uib-tab-heading>
                   <div class="versions" style="margin:30px 0px">
                     <div ng-repeat='version in versions' >
-                            <button  style="width:100%;padding:7px;"ng-class="{active : activeVersion === version}" ng-click="setActive(version)"> {{ version }}</button>
+                            <button  style="width:100%;padding:7px;border-radius:10px !important;backgroundColor: #ddddde !important;margin:2px;" ng-class="{active : activeVersion === version}" ng-click="setActive(version)"> {{ version }}</button>
                     </div>
 
                   </div>
